[package]
name = "pktmon"
version = "0.1.0"
description = "A library for capturing network packets on Windows using the PktMon service"
license = "MIT"
authors = ["emmachase <me@its-em.ma>"]
repository = "https://github.com/emmachase/pktmon"
readme = "README.md"
keywords = ["pktmon", "network", "capture", "windows", "sniffer"]
categories = ["api-bindings", "network-programming", "os", "os::windows-apis"]

edition = "2021"

[dependencies]
cidr = "0.2.3"
log = "0.4.25"

windows = { version = "0.48", features = [
    "Win32_Foundation", 
    "Win32_Security", 
    "Win32_System_Services", 
    "Win32_Storage_FileSystem", 
    "Win32_System_IO",
    "Win32_System_Time",
    "Win32_System_Diagnostics_Etw",
]}

[dev-dependencies]
colog = "1.3.0"
utf16string = "0.2.0"
